--- a/WeLearn/M1-html-css/Labs/lab2-format-fanatics/format_one.css
+++ b/WeLearn/M1-html-css/Labs/lab2-format-fanatics/format_one.css
@@ -16,6 +16,7 @@
 
 .container {
   display: grid;
-  grid-template-columns: /*insert format here*/;
-  grid-template-rows: /*insert formal here*/;
+  grid-template-columns: repeat(2, 2fr);
+  grid-template-rows: 100px 100px;
+  grid-gap: 3px;
 }
